[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/icons/play.png" type="Texture" id=2]
[ext_resource path="res://images/icons/pause.png" type="Texture" id=3]
[ext_resource path="res://images/icons/forward.png" type="Texture" id=4]
[ext_resource path="res://images/towers/BowTower.png" type="Texture" id=5]
[ext_resource path="res://images/enemies/HPbar.jpg" type="Texture" id=6]
[ext_resource path="res://images/icons/home.png" type="Texture" id=7]
[ext_resource path="res://images/towers/tower_dual_gun.png" type="Texture" id=9]
[ext_resource path="res://images/towers/Missile.png" type="Texture" id=10]
[ext_resource path="res://scripts/GameScene.gd" type="Script" id=11]
[ext_resource path="res://images/buttons/blue_button11.png" type="Texture" id=13]
[ext_resource path="res://scripts/BuilderHUDManager.gd" type="Script" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[node name="GameScene" type="Node2D"]
script = ExtResource( 11 )

[node name="UICanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="HUDControl" type="Control" parent="UICanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="BuildBarVBoxContainer" type="VBoxContainer" parent="UICanvasLayer/HUDControl"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2

[node name="HSeparator" type="HSeparator" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer"]
margin_right = 80.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 500 )
mouse_filter = 2
input_pass_on_modal_close_click = false
custom_styles/separator = SubResource( 1 )

[node name="GridContainer" type="GridContainer" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer"]
margin_top = 504.0
margin_right = 80.0
margin_bottom = 584.0
columns = 3

[node name="ArcherTower" type="TextureButton" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 13 )
expand = true

[node name="TowerIconTextureRect" type="TextureRect" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer/ArcherTower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -14.0
texture = ExtResource( 5 )
expand = true

[node name="DualTower" type="TextureButton" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer"]
visible = false
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 13 )
expand = true

[node name="TowerIconTextureRect" type="TextureRect" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer/DualTower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 9 )
expand = true

[node name="MissileTower" type="TextureButton" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer"]
visible = false
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 13 )
expand = true

[node name="TowerIconTextureRect" type="TextureRect" parent="UICanvasLayer/HUDControl/BuildBarVBoxContainer/GridContainer/MissileTower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
texture = ExtResource( 10 )
expand = true

[node name="GameControlHBoxContainer" type="HBoxContainer" parent="UICanvasLayer/HUDControl"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -144.0
margin_top = -70.0
size_flags_vertical = 4

[node name="PausePlayTextureButton" type="TextureButton" parent="UICanvasLayer/HUDControl/GameControlHBoxContainer"]
pause_mode = 2
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="SpeedUpTextureButton" type="TextureButton" parent="UICanvasLayer/HUDControl/GameControlHBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
shortcut_in_tooltip = false
texture_normal = ExtResource( 4 )
expand = true

[node name="InfoBarColorRect" type="ColorRect" parent="UICanvasLayer/HUDControl"]
self_modulate = Color( 0.101961, 0.0941176, 0.0941176, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="UICanvasLayer/HUDControl/InfoBarColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GoldSymbolLabel" type="Label" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer"]
margin_right = 52.0
margin_bottom = 60.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Gold"
align = 2
valign = 1

[node name="GoldAmountLabel" type="Label" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer"]
margin_left = 56.0
margin_right = 156.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 60 )
size_flags_vertical = 5
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 1

[node name="HomeTextureRect" type="TextureRect" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer"]
margin_left = 516.0
margin_right = 576.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
texture = ExtResource( 7 )
expand = true

[node name="HealthTextureProgress" type="TextureProgress" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer"]
margin_left = 580.0
margin_top = 15.0
margin_right = 980.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_vertical = 4
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
tint_under = Color( 0.215686, 0.215686, 0.215686, 1 )
tint_progress = Color( 0.0627451, 0.713726, 0.121569, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer/HealthTextureProgress"]

[node name="VSeparator" type="VSeparator" parent="UICanvasLayer/HUDControl/InfoBarColorRect/HBoxContainer"]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 60.0
rect_min_size = Vector2( 40, 60 )
custom_styles/separator = SubResource( 4 )
